@@ -182,6 +182,12 @@ the time dimension and storing the result into a single output file.</p>
                 <span class="n">more</span> <span class="n">details</span><span class="o">.</span>
                 <span class="n">Operations</span> <span class="n">will</span> <span class="n">be</span> <span class="n">performed</span> <span class="n">before</span> <span class="n">a</span> <span class="n">product</span> <span class="ow">is</span> <span class="n">appended</span><span class="o">.</span>
 
+             <span class="o">-</span><span class="n">ap</span><span class="p">,</span> <span class="o">--</span><span class="n">post</span><span class="o">-</span><span class="n">operations</span> <span class="o">&lt;</span><span class="n">operation</span> <span class="nb">list</span><span class="o">&gt;</span>
+                 <span class="n">List</span> <span class="n">of</span> <span class="n">operations</span> <span class="n">to</span> <span class="n">apply</span> <span class="n">to</span> <span class="n">the</span> <span class="n">merged</span> <span class="n">product</span><span class="o">.</span>
+                 <span class="n">An</span> <span class="n">operation</span> <span class="nb">list</span> <span class="n">needs</span> <span class="n">to</span> <span class="n">be</span> <span class="n">provided</span> <span class="k">as</span> <span class="n">a</span> <span class="n">single</span> <span class="n">expression</span><span class="o">.</span>
+                 <span class="n">See</span> <span class="n">the</span> <span class="s1">&#39;operations&#39;</span> <span class="n">section</span> <span class="n">of</span> <span class="n">the</span> <span class="n">HARP</span> <span class="n">documentation</span> <span class="k">for</span>
+                 <span class="n">more</span> <span class="n">details</span><span class="o">.</span>
+
             <span class="o">-</span><span class="n">o</span><span class="p">,</span> <span class="o">--</span><span class="n">options</span> <span class="o">&lt;</span><span class="n">option</span> <span class="nb">list</span><span class="o">&gt;</span>
                 <span class="n">List</span> <span class="n">of</span> <span class="n">options</span> <span class="n">to</span> <span class="k">pass</span> <span class="n">to</span> <span class="n">the</span> <span class="n">ingestion</span> <span class="n">module</span><span class="o">.</span>
                 <span class="n">Only</span> <span class="n">applicable</span> <span class="k">if</span> <span class="n">an</span> <span class="nb">input</span> <span class="n">product</span> <span class="ow">is</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">HARP</span> <span class="nb">format</span><span class="o">.</span>
